links, videos, hospedagem

--- a/index.html
+++ b/index.html
@@ -11,14 +11,19 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore voluptate quo libero hic accusamus cum, necessitatibus, eos exercitationem, consequuntur placeat impedit autem facilis vel! Iste omnis libero nesciunt expedita ea.</p>
+            <p><a href="curso-html.html">Acesse o curso de HTML5</a></p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="Curso JS">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus, quis deleniti distinctio quod repudiandae dicta minima molestiae beatae, quo ducimus quos nulla vitae, veritatis tempora vel soluta obcaecati ratione est.</p>
+            <P><a href="curso-js.html">Acesse o cruso de JavaScript</a></P>
         </article>
     </main>
 </body>
